Upgrade to Java 20 and JUnit 5.